feat: Hibernate connection
Подключение Hibernate Core
к проекту